--- a/yashi.ipynb
+++ b/yashi.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,29 +150,29 @@
     "At this point we need to generate the SAT constraints, but the library used to solve them requires the variables to be integers. In this section we define a couple of methods for converting the 3 kind of variables used into integer ids. The variables used are:\n",
     "\n",
     "- `var_edge` generates the integer ids for $e_i$, which represent whether the edge $i$ is selected or not;\n",
-    "- `var_directed_edge` generates the integer ids for $e^+_i$ and $e^-_i$, which represent the direction in which the edge $i$ is selected; these will be useful later for some kind of constraints;\n",
+    "- `var_child` generates the integer ids for $c_{ij}$, which represent the fact that the node $i$ is a direct child of node $j$ in the final tree. Note that these variables exist only for nodes $i$ and $j$ that are directly connected by edges;\n",
     "- `var_under` generates the integer ids for $u_{ij}$, which represent whether the node $i$ stands under (not necessarily directly) the node $j$ in the final spanning tree."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The first len(edges) variables represent whether an undirected edge is selected.\n",
+    "# The first len(edges) variables represent whether an edge is selected.\n",
     "# These are directly encoded with the edge index (plus 1 to start from 1 instead of 0).\n",
     "def var_edge(e):\n",
     "    return 1 + e\n",
     "\n",
     "# After the first len(edges) variables, the next 2*len(edges) variables\n",
-    "# represent whether the edge from ns to ne is selected in that specific direction.\n",
-    "# Note that an edge from ns to ne is expected to exist, or this will error.\n",
+    "# represent whether the node ni is a direct direct of the node nj\n",
+    "# Note that an edge from ni to nj is expected to exist, or this will error.\n",
     "# These are encoded sorted by edge index, which gets multiplied by 2 because there are two variables per edge.\n",
-    "def var_directed_edge(edges, ns, ne):\n",
-    "    # Edge nodes are always stored in order, to (ns, ne) may not exist in edges\n",
-    "    # if ns > ne. Using tuple(sorted((ns, ne))) solves this problem\n",
-    "    return 1 + len(edges) + 2 * edges.index(tuple(sorted((ns, ne)))) + (ns > ne)\n",
+    "def var_child(edges, ni, nj):\n",
+    "    # Edge nodes are always stored in order (ns, ne) with ns < ne.\n",
+    "    # Using tuple(sorted((ni, nj))) gives thus the correct encoding of the edge between ni and nj\n",
+    "    return 1 + len(edges) + 2 * edges.index(tuple(sorted((ni, nj)))) + (ni > nj)\n",
     "\n",
     "# After the first len(edges)+2*len(edges), the next len(nodes)**2 variables\n",
     "# represent whether a node ni is \"under\" a node nj in the solution tree.\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,67 +215,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constraints for correspondence between undirected and directed edges\n",
+    "### Constraints for selecting edges\n",
     "\n",
-    "A undirected edge is selected if and only if one of its corresponding directed edge is selected, that is for every edge $i$ we have $e_i \\leftrightarrow e^+_i \\vee e^-_i$, which gets expanded into $(\\neg e_i \\vee e^+_i \\vee e^-_i) \\land (e_i \\vee \\neg e^+_i) \\land (e_i \\vee \\neg e^-_i)$.\n",
-    "\n",
-    "Moreover an edge can only be selected in one direction, that is the two directions are mutually exclusive, and this can be expressed with $\\neg e^+_i \\vee \\neg e^-_i$"
+    "An edge $i$ between two nodes $j$ and $k$ is selected if and only if one of them is a direct child of the other, that is we have $e_i \\leftrightarrow c_{jk} \\vee c_{kj}$, which gets expanded into $(\\neg e_i \\vee c_{jk} \\vee c_{kj}) \\land (e_i \\vee \\neg c_{jk}) \\land (e_i \\vee \\neg c_{kj})$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints_directed(edges):\n",
+    "def constraints_edges(edges):\n",
     "    for e, (ns, ne) in enumerate(edges):\n",
     "        ve = var_edge(e)\n",
-    "        vse = var_directed_edge(edges, ns, ne)\n",
-    "        ves = var_directed_edge(edges, ne, ns)\n",
-    "        # An undirected edge is selected iff one of its directed versions is selected\n",
+    "        vse = var_child(edges, ns, ne)\n",
+    "        ves = var_child(edges, ne, ns)\n",
+    "        # There is an edge between two nodes iff one of them is a direct child of the other\n",
     "        yield [-ve, vse, ves]\n",
     "        yield [ve, -vse]\n",
-    "        yield [ve, -ves]\n",
-    "        # Two corresponding directed edges cannot be selected at the same time\n",
-    "        yield [-vse, -ves]"
+    "        yield [ve, -ves]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constraints for the parent edges\n",
+    "### Constraints for selecting parents\n",
     "\n",
-    "We want the resulting graph to be a spanning tree and one of the ways to do this involves forcing it to have `len(nodes) - 1` edges. Doing this with an \"exactly n\" constraint will result in an exponential number of clauses though. Fortunately we also require the final graph to be a tree, which can simplify this a lot: in fact we can identify each edge as connecting a node to its parent in the tree, reducing the problem to an \"exactly 1\" constraint. To distinguish an edge that connects a child to its parent from one that connects the parent to the child, we use the edge direction, which is why we have variables for them.\n",
+    "We want the resulting graph to be a spanning tree and one of the ways to do this involves forcing it to have `len(nodes) - 1` edges. Doing this with an \"exactly n\" constraint will result in an exponential number of clauses though. Fortunately we also require the final graph to be a tree, which can simplify this a lot. Every edge can be viewed as connecting a node to its parent in the tree, and every node (excluding the root) must have exactly one of such edges, reducing the problem to stating that every node must be the child of exactly one other node.\n",
     "\n",
     "Overall this reduces to the following clauses:\n",
     "\n",
-    "- $\\neg e^+_i$ for all edges $i$ starting from the node $0$\n",
-    "- $e^+_{i_1} \\vee e^+_{i_2} \\vee ... \\vee e^-_{j_1} \\vee e^-_{j_2} \\vee ...$ for all edges $i_1, ...$ starting from the node $k$ and edges $j_1, ...$ ending in node $k$, for $k \\neq 0$\n",
-    "- $\\neg e^\\pm_x \\vee \\neg e^\\pm_y$ for all $e^\\pm_x$, $e^\\pm_y$ present in the previous clause"
+    "- $\\neg c_{0i}$ for all nodes $i$ connected to the node $0$;\n",
+    "- $c_{ij} \\vee c_{ik} \\vee ...$ for all $j, k, ...$ that are connected to the node $i \\neq 0$;\n",
+    "- $\\neg c_{ij} \\vee \\neg c_{ik}$ for all pairs of nodes $j, k, ...$ in the previous clause."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints_parent_edge(nodes, edges):\n",
-    "    # The root node 0 cannot have parent directed edges\n",
+    "def constraints_parent(nodes, edges):\n",
+    "    # The root node 0 is not a child.\n",
     "    for ns, ne in edges:\n",
     "        if ns == 0:\n",
-    "            yield [-var_directed_edge(edges, 0, ne)]\n",
+    "            yield [-var_child(edges, 0, ne)]\n",
     "\n",
-    "    # Every other node must have exactly one parent directed edge\n",
+    "    # Every other node must be the child of exactly one other node\n",
     "    for n in range(1, len(nodes)):\n",
+    "        # Find which nodes the node n is adjacent to\n",
     "        adj = [m for m in range(len(nodes)) if (n, m) in edges or (m, n) in edges]\n",
-    "        # At least one\n",
-    "        yield [var_directed_edge(edges, n, o) for o in adj]\n",
-    "        # At most one\n",
+    "        # It must the child of at least one of them\n",
+    "        yield [var_child(edges, n, o) for o in adj]\n",
+    "        # It must be the child of at most one of them\n",
     "        for m, o in combinations(adj, 2):\n",
-    "            yield [-var_directed_edge(edges, n, m), -var_directed_edge(edges, n, o)]"
+    "            yield [-var_child(edges, n, m), -var_child(edges, n, o)]"
    ]
   },
   {
@@ -284,27 +281,29 @@
    "source": [
     "### Constraints for the \"under\" relation\n",
     "\n",
-    "We want the resulting graph to be acyclic, and the way we do this is by forcing a child node to be under a parent node. Since every node is connected to only one parent, in order to form a cycle the parent would have to be someone connected to its child or a child or it child and so on. If this were to happen they would be one under the other and that would form a contradiction, and thus a clause would break. Formally, we define the \"under\" relation as an irreflexive and transitive relation, and implied by the presence of a directed edge from a child to a parent.\n",
+    "We want the resulting graph to be acyclic, and the way we do this is by forcing a child node to be under a parent node. Formally, we define the \"under\" relation as an irreflexive and transitive relation, and implied by the presence of an edge from a child to a parent.\n",
+    "\n",
+    "If there was a cycle this relation would not exist. In particular consider a cycle and one of its edges: it must connect a parent to a child, which is under the parent. Then consider the other edge of the cycle connected to that child. It cannot connect it to its parent, because that can only be done by one edge and we already considered it, thus it must connect it to one of its children, which by transitivity is under the original parent. Repeating this process we can see that every other node of the cycle is under the original parent. But since it is a cycle it must reach the original parent, yielding by transitivity the fact that that node is under itself, which is a contradiction. Thus if the relation is satisfied there are no cycles.\n",
     "\n",
     "Overall this reduces to the following clauses:\n",
     "\n",
-    "- $e^+_i \\to u_{jk}$, which becomes $\\neg e^+_i \\vee u_jk$, if edge $i$ goes from node $j$ to node $k$;\n",
-    "- $e^-_i \\to u_{jk}$, which becomes $\\neg e^-_i \\vee u_jk$, if edge $i$ goes from node $k$ to node $j$;\n",
+    "- $c_{ij} \\to u_{ij}$, which becomes $\\neg c_{ij} \\vee u_{ij}$ for any node $i$ and $j$ connected by an edge\n",
     "- $\\neg u_{ii}$, to enforce irreflexivity;\n",
     "- $u_{ij} \\land u_{jk} \\to u_{ik}$, which becomes $\\neg u_{ij} \\vee \\neg u_{jk} \\vee u_{ik}$, for all nodes $i$, $j$ and $k$, to enforce transitivity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints_hierarchy(nodes, edges):\n",
+    "def constraints_under(nodes, edges):\n",
     "    for ns, ne in edges:\n",
-    "        # A parent directed edge implies a node is under its parent\n",
-    "        yield [-var_directed_edge(edges, ns, ne), var_under(nodes, edges, ns, ne)]\n",
-    "        yield [-var_directed_edge(edges, ne, ns), var_under(nodes, edges, ne, ns)]\n",
+    "        # A node being a child of another node implies it is under that node.\n",
+    "        # Note that every pair of nodes gives birth to two child and under variables, thus two implications.\n",
+    "        yield [-var_child(edges, ns, ne), var_under(nodes, edges, ns, ne)]\n",
+    "        yield [-var_child(edges, ne, ns), var_under(nodes, edges, ne, ns)]\n",
     "        \n",
     "    for n in range(len(nodes)):\n",
     "        # The \"under\" relation is irreflexive: a node cannot be under itself\n",
@@ -324,15 +323,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def constraints(nodes, edges, conflicts):\n",
     "    yield from constraints_conflict(conflicts)\n",
-    "    yield from constraints_directed(edges)\n",
-    "    yield from constraints_parent_edge(nodes, edges)\n",
-    "    yield from constraints_hierarchy(nodes, edges)"
+    "    yield from constraints_edges(edges)\n",
+    "    yield from constraints_parent(nodes, edges)\n",
+    "    yield from constraints_under(nodes, edges)"
    ]
   },
   {
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
