Finish presentation, review code

--- a/yashi.ipynb
+++ b/yashi.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,20 +102,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conflict detection\n",
+    "## Crossing detection\n",
     "\n",
     "Once the set of possible edges has been found, the second step is finding out which of them are incompatible with each other.\n",
-    "This is also done by iterating through every possible edge pair and checking whether they conflict, that is they have different directions and both cross the constant coordinate of the other."
+    "This is also done by iterating through every possible edge pair and checking whether they cross, that is they have different directions and both cross the constant coordinate of the other."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_conflicts(nodes, edges):\n",
-    "    def edges_conflict(nodes, edge1, edge2):\n",
+    "def find_crossings(nodes, edges):\n",
+    "    def edges_cross(nodes, edge1, edge2):\n",
     "        s1, e1 = edge1\n",
     "        s2, e2 = edge2\n",
     "        \n",
@@ -137,7 +137,7 @@
     "        return False\n",
     "    \n",
     "    for (i, edge1), (j, edge2) in combinations(enumerate(edges), 2):\n",
-    "        if edges_conflict(nodes, edge1, edge2):\n",
+    "        if edges_cross(nodes, edge1, edge2):\n",
     "            yield (i, j)"
    ]
   },
@@ -147,7 +147,7 @@
    "source": [
     "## Variables\n",
     "\n",
-    "At this point we need to generate the SAT constraints, but the library used to solve them requires the variables to be integers. In this section we define a couple of methods for converting the 3 kind of variables used into integer ids. The variables used are:\n",
+    "At this point we need to generate the SAT formulation, but the library used to solve them requires the variables to be integers. In this section we define a couple of methods for converting the 3 kind of variables used into integer ids. The variables used are:\n",
     "\n",
     "- `var_edge` generates the integer ids for $e_i$, which represent whether the edge $i$ is selected or not;\n",
     "- `var_child` generates the integer ids for $c_{ij}$, which represent the fact that the node $i$ is a direct child of node $j$ in the final tree. Note that these variables exist only for nodes $i$ and $j$ that are directly connected by edges;\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,29 +185,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constraints\n",
-    "\n",
-    "The last important step is to actually generate the constraints. These are divided in 4 kinds:"
+    "## Clauses"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constraints for conflicts\n",
+    "### Clauses for crossings\n",
     "\n",
-    "For each edge $i$ which conflict with edge $j$ we generate a constraint $\\neg e_i \\vee \\neg e_j$."
+    "For each edge $i$ which cross edge $j$ we generate a clause $\\neg e_i \\vee \\neg e_j$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints_conflict(conflicts):\n",
-    "    for ei, ej in conflicts:\n",
-    "        # Two conflicting edges cannot be selected at the same time\n",
+    "def clauses_crossings(crossings):\n",
+    "    for ei, ej in crossings:\n",
+    "        # Two crossing edges cannot be selected at the same time\n",
     "        yield [-var_edge(ei), -var_edge(ej)]"
    ]
   },
@@ -215,18 +213,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constraints for selecting edges\n",
+    "### Clauses for children\n",
     "\n",
-    "An edge $i$ between two nodes $j$ and $k$ is selected if and only if one of them is a direct child of the other, that is we have $e_i \\leftrightarrow c_{jk} \\vee c_{kj}$, which gets expanded into $(\\neg e_i \\vee c_{jk} \\vee c_{kj}) \\land (e_i \\vee \\neg c_{jk}) \\land (e_i \\vee \\neg c_{kj})$."
+    "One of the two conditions for a graph to be a spanning tree is to have exactly `len(nodes) - 1` edges. Luckily this can be enforced via a local property: each edge can be seen as connecting a child to its parent, and each node, excluding the root, has exactly one such edge.\n",
+    "\n",
+    "This produces the following clauses:\n",
+    "\n",
+    "- an edge is selected if and only if it connects a child to its parent. This can be stated as $e_i \\leftrightarrow c_{jk} \\vee c_{kj}$ which can be converted to CNF as $(\\neg e_i \\vee c_{jk} \\vee c_{kj}) \\land (e_i \\vee \\neg c_{jk}) \\land (e_i \\vee \\neg c_{kj})$;\n",
+    "- the root node isn't connected to any parent. This can be stated $\\neg c_{0i}$ for all nodes $i$ connected to the node $0$;\n",
+    "- each node is connected to at least one parent. This can be stated as $c_{ij} \\vee c_{ik} \\vee ...$ for all $j, k, ...$ that are connected to the node $i \\neq 0$;\n",
+    "- each node is connected to at most one parent. This can be stated as $\\neg c_{ij} \\vee \\neg c_{ik}$ for all pairs of nodes $j, k, ...$ in the previous clause."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints_edges(edges):\n",
+    "def clauses_children(nodes, edges):\n",
     "    for e, (ns, ne) in enumerate(edges):\n",
     "        ve = var_edge(e)\n",
     "        vse = var_child(edges, ns, ne)\n",
@@ -234,31 +239,8 @@
     "        # There is an edge between two nodes iff one of them is a direct child of the other\n",
     "        yield [-ve, vse, ves]\n",
     "        yield [ve, -vse]\n",
-    "        yield [ve, -ves]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Constraints for selecting parents\n",
-    "\n",
-    "We want the resulting graph to be a spanning tree and one of the ways to do this involves forcing it to have `len(nodes) - 1` edges. Doing this with an \"exactly n\" constraint will result in an exponential number of clauses though. Fortunately we also require the final graph to be a tree, which can simplify this a lot. Every edge can be viewed as connecting a node to its parent in the tree, and every node (excluding the root) must have exactly one of such edges, reducing the problem to stating that every node must be the child of exactly one other node.\n",
-    "\n",
-    "Overall this reduces to the following clauses:\n",
-    "\n",
-    "- $\\neg c_{0i}$ for all nodes $i$ connected to the node $0$;\n",
-    "- $c_{ij} \\vee c_{ik} \\vee ...$ for all $j, k, ...$ that are connected to the node $i \\neq 0$;\n",
-    "- $\\neg c_{ij} \\vee \\neg c_{ik}$ for all pairs of nodes $j, k, ...$ in the previous clause."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def constraints_parent(nodes, edges):\n",
+    "        yield [ve, -ves]\n",
+    "    \n",
     "    # The root node 0 is not a child.\n",
     "    for ns, ne in edges:\n",
     "        if ns == 0:\n",
@@ -279,26 +261,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constraints for the \"under\" relation\n",
+    "### Clauses for the \"under\" relation\n",
     "\n",
-    "We want the resulting graph to be acyclic, and the way we do this is by forcing a child node to be under a parent node. Formally, we define the \"under\" relation as an irreflexive and transitive relation, and implied by the presence of an edge from a child to a parent.\n",
+    "The second condition for the graph to be a spanning tree is to be acyclic. We can enforce this by forcing the existance of an \"under\" relation, that is a relation implied by the \"child\" relation just defined and closed under transitivity and irreflexivity.\n",
     "\n",
-    "If there was a cycle this relation would not exist. In particular consider a cycle and one of its edges: it must connect a parent to a child, which is under the parent. Then consider the other edge of the cycle connected to that child. It cannot connect it to its parent, because that can only be done by one edge and we already considered it, thus it must connect it to one of its children, which by transitivity is under the original parent. Repeating this process we can see that every other node of the cycle is under the original parent. But since it is a cycle it must reach the original parent, yielding by transitivity the fact that that node is under itself, which is a contradiction. Thus if the relation is satisfied there are no cycles.\n",
+    "To see why this prevent cycles, assume that a cycle exist, then pick one of its edges. This edge must connect a child $n_j$ to its parent $n_i$, so $n_j$ is under $n_i$. Consider then the other edge of the cycle connected to $n_j$. It can't connect it to its parent, because that edge is unique and we've already considered it, so it must connect it to one of its children $n_k$. Thus $n_k$ is under $n_j$, and by transitivity it's under $n_i$. Continuing this reasoning to all the other edges of the cycle, we get that all the other nodes we encounter are under the node $n_i$. However since we have a cycle we must reach $n_i$ again, thus obtaining that $n_i$ is under $n_i$. This is impossible because the under relation is irreflexive, so we got a contradiction and a cycle can't exist.\n",
     "\n",
-    "Overall this reduces to the following clauses:\n",
+    "This also doesn't prevent valid solutions because every tree form a hierarchy which satisfies this relation.\n",
     "\n",
-    "- $c_{ij} \\to u_{ij}$, which becomes $\\neg c_{ij} \\vee u_{ij}$ for any node $i$ and $j$ connected by an edge\n",
-    "- $\\neg u_{ii}$, to enforce irreflexivity;\n",
-    "- $u_{ij} \\land u_{jk} \\to u_{ik}$, which becomes $\\neg u_{ij} \\vee \\neg u_{jk} \\vee u_{ik}$, for all nodes $i$, $j$ and $k$, to enforce transitivity."
+    "This produces the following clauses:\n",
+    "\n",
+    "- a child is always under its parent. This can be stated as $c_{ij} \\to u_{ij}$ for all nodes $i$ and $j$ connected by an edge, which in CNF becomes $\\neg c_{ij} \\vee u_{ij}$;\n",
+    "- irreflexivity: a node is never under itself. This can be stated as $\\neg u_{ii}$ for all nodes $i$;\n",
+    "- transitivity: if a node $n_i$ is under $n_j$ and $n_j$ is under $n_k$ then $n_i$ is under $n_k$ as well. This can be stated as $u_{ij} \\land u_{jk} \\to u_{ik}$ for all nodes $i$, $j$ and $k$, which in CNF becomes $\\neg u_{ij} \\vee \\neg u_{jk} \\vee u_{ik}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints_under(nodes, edges):\n",
+    "def clauses_under(nodes, edges):\n",
     "    for ns, ne in edges:\n",
     "        # A node being a child of another node implies it is under that node.\n",
     "        # Note that every pair of nodes gives birth to two child and under variables, thus two implications.\n",
@@ -318,20 +302,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we merge all the constraints in a single function."
+    "Finally we merge all the clauses in a single function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraints(nodes, edges, conflicts):\n",
-    "    yield from constraints_conflict(conflicts)\n",
-    "    yield from constraints_edges(edges)\n",
-    "    yield from constraints_parent(nodes, edges)\n",
-    "    yield from constraints_under(nodes, edges)"
+    "def clauses(nodes, edges, crossings):\n",
+    "    yield from clauses_crossings(crossings)\n",
+    "    yield from clauses_children(nodes, edges)\n",
+    "    yield from clauses_under(nodes, edges)"
    ]
   },
   {
@@ -343,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,16 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def yashi(nodes):\n",
     "    nodes = sorted(nodes)\n",
     "    edges = list(find_edges(nodes))\n",
-    "    conflicts = list(find_conflicts(nodes, edges))\n",
+    "    crossings = list(find_crossings(nodes, edges))\n",
     "\n",
-    "    solver = Minisat22(bootstrap_with = constraints(nodes, edges, conflicts))\n",
+    "    solver = Minisat22(bootstrap_with = clauses(nodes, edges, crossings))\n",
     "\n",
     "    if solver.solve():\n",
     "        plot_solution(nodes, edges, solver.get_model())\n",
@@ -403,25 +386,25 @@
     "\n",
     "## Minimum-length solution\n",
     "\n",
-    "In order to find a minimum length solution we use Max-SAT to solve the same problem as before, keeping all the clauses as hard clauses, but adding one soft clause per edge with weight equal to the negation of its length. This makes it so that the weight of the interpretation will be the negation of the length of the solution, and maximing that will result in minimizing the length of the solution. "
+    "To find a minimum-length solution we can use Max-SAT. Since we have to maximize something, but the goal is to minimize the total length, we can maximize the negation of the total length. Given a solution we can get its length by summing the length of its edges, so it natually follows that we can assign to each edge its length as weigth, except it should be negated due to we wanting to minimizing it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def min_yashi(nodes):\n",
     "    nodes = sorted(nodes)\n",
     "    edges = list(find_edges(nodes))\n",
-    "    conflicts = find_conflicts(nodes, edges)\n",
+    "    crossings = find_crossings(nodes, edges)\n",
     "\n",
     "    # RC2 is a pythonsat solver for max sat\n",
     "    solver = RC2(WCNFPlus(), solver=\"m22\")\n",
     "\n",
     "    # Manually add hard clauses because there's no `extend` or `bootstrap_with`\n",
-    "    for clause in constraints(nodes, edges, conflicts):\n",
+    "    for clause in clauses(nodes, edges, crossings):\n",
     "        solver.add_clause(clause)\n",
     "\n",
     "    # Add the soft clauses for the edge lengths\n",
@@ -447,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
